<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ib2_data_replay</name>
  <version>0.0.0</version>
  <description>This package contains scripts and nodes for subscribing to topics from a ROS bag file and republishing the data to a simulation environment, enabling playback and testing of recorded data in the simulation.</description>
  <maintainer email="sintharit1716@gmail.com">tharitubun</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>ib2_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
