<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>int-ball2_isaac_sim</name>
  <version>0.0.0</version>
  <description>Package for Int-Ball2 simulation in KIBOU space station environment</description>
  <maintainer email="tharit.sinsunthorn.r1@dc.tohoku.ac.jp">mslaptop2</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>isaac_ros_nitros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
